--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   <body>
     <h1>Welcome to the Meteo App</h1>
   </body>
-  <footer>Coded by Lucia Kartous</footer>
+  <footer>
+    Coded by
+    <a href="https://github.com/LuciaKartous" target="_blank">Lucia Kartous</a>,
+    code hosted on
+    <a href="https://github.com/LuciaKartous/pocasie" target="_blank">GitHub</a>
+    and website hosted on
+    <a href="https://pocasie-shecodes-app.netlify.app/" target="_blank"
+      >Netlify</a
+    >
+  </footer>
 </html>
