--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <footer>
     Coded by
     <a href="https://github.com/LuciaKartous" target="_blank">Lucia Kartous</a>,
-    code hosted on
-    <a href="https://github.com/LuciaKartous/pocasie" target="_blank">GitHub</a>
-    and website hosted on
+    is
+    <a href="https://github.com/LuciaKartous/pocasie" target="_blank"
+      >open-sourced on GitHub</a
+    >
+    and
     <a href="https://pocasie-shecodes-app.netlify.app/" target="_blank"
-      >Netlify</a
+      >hosted on Netlify</a
     >
   </footer>
 </html>
