Added the HTML to the project

--- a/index.html
+++ b/index.html
@@ -6,18 +6,35 @@
     <title>Meteo App</title>
   </head>
   <body>
-    <h1>Welcome to the Meteo App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <h1>Paris</h1>
+      <div>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌤️12°C</div>
+    </main>
+
+    <footer>
+      Coded by
+      <a href="https://github.com/LuciaKartous" target="_blank">Lucia Kartous</a
+      >, is
+      <a href="https://github.com/LuciaKartous/pocasie" target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a href="https://pocasie-shecodes-app.netlify.app/" target="_blank"
+        >hosted on Netlify</a
+      >
+    </footer>
   </body>
-  <footer>
-    Coded by
-    <a href="https://github.com/LuciaKartous" target="_blank">Lucia Kartous</a>,
-    is
-    <a href="https://github.com/LuciaKartous/pocasie" target="_blank"
-      >open-sourced on GitHub</a
-    >
-    and
-    <a href="https://pocasie-shecodes-app.netlify.app/" target="_blank"
-      >hosted on Netlify</a
-    >
-  </footer>
 </html>
